--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,7 @@
     },
     "require": {
         "php": "7.1.*",
-        "marellocommerce/marello": "1.x-dev"
+        "marellocommerce/marello": "1.4.*"
     },
     "repositories": {
         "oro": {
